--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,14 +7,20 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
-envy = "0.4"
+config = "0.12"
+chrono = "0.4"
+deadpool-postgres = { version = "0.10", features = ["serde"] }
 futures-util = "0.3"
-imap = "3.0.0-alpha.4"
+imap = "3.0.0-alpha.6"
+imap-proto = "0.15"
 log = "0.4"
-once_cell = "1.9.0"
+once_cell = "1.9"
 pretty_env_logger = "0.4"
+rand = "0.8"
+regex = "1.5"
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-thirtyfour = "0.28.1"
+thirtyfour = "0.28"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
